--- a/style-home.css
+++ b/style-home.css
@@ -47,6 +47,13 @@ nav ul li:last-child {
     margin-right: 0;
 }
 
+nav ul li a:hover {
+    color: #e0e0e0;
+    text-decoration: underline;
+}
+
+
+
 img {
     max-width: 100%;
     height: auto;
@@ -55,12 +62,11 @@ img {
 .ropa-wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start; /* Alinea los elementos al inicio del contenedor */
+    justify-content: flex-start;
     gap: 20px;
     padding: 20px;
-    max-width: 440px; /* Ajustado según el tamaño de las imágenes y el espacio deseado entre ellas */
-    /* Eliminamos margin-left y margin-right automáticos para no centrar el contenedor */
-    border: 1px solid transparent; /* Cambiado a transparente para mantener el layout sin mostrar un borde. Modifica según necesidad */
+    max-width: 440px;
+    border: 1px solid transparent; 
 }
 
 .item {
@@ -68,6 +74,6 @@ img {
     height: 200px;
     background-size: cover;
     background-position: center;
-    border: 1px solid black; /* Añade un borde a cada imagen si deseas */
+    border: 1px solid black;
 }
 
