--- a/style.css
+++ b/style.css
@@ -163,33 +163,33 @@ img {
 
 #menu-icon span {
     display: block;
-    width: 30px; /* Ancho de las barras */
-    height: 3px; /* Altura de las barras */
-    background-color: #333; /* Color de las barras */
-    margin: 5px 0; /* Espacio entre las barras */
+    width: 30px;
+    height: 3px;
+    background-color: #333; 
+    margin: 5px 0; 
 }
 
-/* Asegurar que la barra lateral aparece debajo del logo y sobre los productos */
+
 .carrito {
     position: fixed;
     top: 60px;
     left: 0;
     width: 250px;
-    background-color: #fff; /* Fondo claro */
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Sombra suave */
-    border-radius: 10px; /* Bordes redondeados */
-    padding: 20px; /* Espaciado interno */
+    background-color: #fff; 
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    padding: 20px; 
     transform: translateX(-100%);
     transition: transform 0.5s ease-in-out;
     z-index: 1000;
 }
 
 .carrito.activo {
-    transform: translateX(0); /* Mostrar al activar */
+    transform: translateX(0); 
 }
 
-/* Asegurarte de que el contenido no se sobreponga */
+
 main {
-    padding-top: 70px; /* Ajustar basado en la altura total de tu header */
+    padding-top: 70px;
 }
 
